--- a/public_html/carrinho.html
+++ b/public_html/carrinho.html
@@ -21,6 +21,8 @@ and open the template in the editor.
 
         <!--Importar o CSS do Bootstrap-->
         <link rel="stylesheet" href="css/bootstrap.css"/>
+        
+        <link rel="stylesheet" href="css/font-awesome.min.css">
 
         <style type="text/css">
             .centralizar{
@@ -204,7 +206,6 @@ and open the template in the editor.
                                 </div>
                             </li>
                         </ul>
-                        
                         <!--PESQUISA DE PRODUTOS!-->
 
                         <form class="form-inline my-2 my-lg-0">
