--- a/public_html/index.html
+++ b/public_html/index.html
@@ -14,7 +14,7 @@
         <!--importar o css de boodstrap-->
         <script src="css/bootstrap.css"></script>
         <link rel="stylesheet" href="css/bootstrap.css">
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="shortcut icon" type="image/png" href="https://img00.deviantart.net/ceb4/i/2016/172/2/1/team_gurren_lagann_logo_vector_by_iklone-da73gb2.png"/>
 
     </head>
@@ -177,7 +177,6 @@
 
                                 </div>
                             </li>
-                        </ul>
                         </ul>
                         <!--PESQUISA DE PRODUTOS!-->
 
