--- a/public_html/login.html
+++ b/public_html/login.html
@@ -1,11 +1,11 @@
 <html><head>
         <title>Login</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" type="image/png" href="https://img00.deviantart.net/ceb4/i/2016/172/2/1/team_gurren_lagann_logo_vector_by_iklone-da73gb2.png"/>
         <script src="css/bootstrap.css"></script>
-        <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
         <link rel="stylesheet" href="css/bootstrap.css">
         
     </head>
